--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,11 +27,11 @@ steps:
   waitFor: ['terraform-apply']
 
 # 4b. Deploy the Cloud Function that listens to the bucket
-- name: gcr.io/cloud-builders/gcloud
-  id: function-deploy
-  args: ['functions', 'deploy', 'goWithTheDataFlow', '--stage-bucket=gs://batch-pipeline-poc', '--trigger-bucket=gs://batch-pipeline-poc']
-  dir: 'cloud-function'
-  waitFor: ['npm-install-test']
+#- name: gcr.io/cloud-builders/gcloud
+#  id: function-deploy
+#  args: ['functions', 'deploy', 'goWithTheDataFlow', '--stage-bucket=gs://batch-pipeline-poc', '--trigger-bucket=gs://batch-pipeline-poc']
+#  dir: 'cloud-function'
+#  waitFor: ['npm-install-test']
 
 # 5. Trigger the pipeline for demo purposes
 - name: gcr.io/cloud-builders/gsutil
