--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,11 +20,11 @@ steps:
   waitFor: ['terraform-apply']
 
 # 4a. Install npm & run tests
-#- name: gcr.io/cloud-builders/npm
-#  id: npm-install-test
-#  args: ['install-test']
-#  dir: 'cloud-function'
-#  waitFor: ['terraform-apply']
+- name: gcr.io/cloud-builders/npm
+  id: npm-install-test
+  args: ['install-test']
+  dir: 'cloud-function'
+  waitFor: ['terraform-apply']
 
 # 4b. Deploy the Cloud Function that listens to the bucket
 #- name: gcr.io/cloud-builders/gcloud
@@ -36,6 +36,7 @@ steps:
 # 5. Trigger the pipeline for demo purposes
 - name: gcr.io/cloud-builders/gsutil
   args: ['cp', 'gs://test-file-for-dataflow/*', 'gs://batch-pipeline-poc/upload/file.csv']
+  waitFor: ['npm-install-test']
 
 # 6. Copy tarball/archive to GCS for more shenanigans later
 artifacts:
