--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,9 +15,9 @@ steps:
   dir: 'terraform'
 
 # 3. Build and run the Dataflow pipeline (staged template)
-- name: gcr.io/cloud-builders/gradle
-  args: ['build', 'run']
-  waitFor: ['terraform-apply']
+#- name: gcr.io/cloud-builders/gradle
+#  args: ['build', 'run']
+#  waitFor: ['terraform-apply']
 
 # 4a. Install npm & run tests
 - name: gcr.io/cloud-builders/npm
